--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: svUnit
+Type: Package
 Title: SciViews GUI API - Unit testing
 Depends: R (>= 1.9.0)
 Suggests: svGUI, datasets, utils
 Description: A complete unit test system and functions to implement its
         GUI part
-Version: 0.6-2
-Date: 2009-01-12
+Version: 0.6-4
+Date: 2009-10-10
 Author: Philippe Grosjean
 Maintainer: Philippe Grosjean <phgrosjean@sciviews.org>
 License: GPL (>= 2)
+LazyLoad: yes
 URL: http://www.sciviews.org/SciViews-R
+Packaged: 2009-10-29 17:44:07 UTC; phgrosjean
 Repository: CRAN
-Repository/R-Forge/Project: sciviews
-Repository/R-Forge/Revision: 144
-Date/Publication: 2009-06-28 16:49:59
-Packaged: 2009-06-27 21:07:27 UTC; rforge
+Date/Publication: 2009-10-30 16:02:44
