--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,13 +5,14 @@ Depends: R (>= 1.9.0)
 Suggests: svGUI, datasets, utils
 Description: A complete unit test system and functions to implement its
         GUI part
-Version: 0.6-4
-Date: 2009-10-10
+Version: 0.7-2
+Date: 2010-05-17
 Author: Philippe Grosjean
 Maintainer: Philippe Grosjean <phgrosjean@sciviews.org>
-License: GPL (>= 2)
+License: GPL-2
 LazyLoad: yes
 URL: http://www.sciviews.org/SciViews-R
-Packaged: 2009-10-29 17:44:07 UTC; phgrosjean
+BugReports: https://r-forge.r-project.org/tracker/?group_id=194
+Packaged: 2010-05-18 06:28:41 UTC; phgrosjean
 Repository: CRAN
-Date/Publication: 2009-10-30 16:02:44
+Date/Publication: 2010-05-18 06:29:46
