--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,19 @@ Package: svUnit
 Type: Package
 Title: SciViews GUI API - Unit testing
 Depends: R (>= 1.9.0)
-Suggests: svGUI, datasets, utils
+Suggests: svGUI, datasets, utils, XML
 Description: A complete unit test system and functions to implement its
         GUI part
-Version: 0.7-3
-Date: 2010-09-05
+Version: 0.7-5
+Date: 2010-09-30
 Author: Philippe Grosjean
 Maintainer: Philippe Grosjean <phgrosjean@sciviews.org>
 License: GPL-2
 LazyLoad: yes
 URL: http://www.sciviews.org/SciViews-R
 BugReports: https://r-forge.r-project.org/tracker/?group_id=194
-Packaged: 2010-09-25 07:33:38 UTC; phgrosjean
 Repository: CRAN
-Date/Publication: 2010-09-27 06:35:50
+Repository/R-Forge/Project: sciviews
+Repository/R-Forge/Revision: 338
+Date/Publication: 2010-11-11 12:41:15
+Packaged: 2010-10-31 21:51:14 UTC; rforge
