--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,42 +1,43 @@
-export(	as.svSuite,
-		as.svTest,
-		checkEquals,
-		checkEqualsNumeric,
-		checkIdentical,
-		checkTrue,
-		checkException,
-		clearLog,
-		createLog,
-		DEACTIVATED,
-		errorLog,
-		guiSuiteAutoList,
-		guiSuiteList,
-		guiTestFeedback,
-		guiTestReport,
-		koUnit_isAutoTest,
-		koUnit_setAutoTest,
-		koUnit_runTest,
-		koUnit_showRUnitPane,
-		koUnit_version,
-		is.svSuite,
-		is.svSuiteData,
-		is.svTest,
-		is.svTestData,
-		is.test,
-		lastSuite,
-		lastTest,
-		Log,
-		makeUnit,
-		metadata,
-		protocol,
-		protocol_text,
-		runTest,
-		stats,
-		svSuite,
-		svSuiteList,
-		svTest,
-		test,
-		"test<-")
+export(as.svSuite,
+       as.svTest,
+       checkEquals,
+       checkEqualsNumeric,
+       checkIdentical,
+       checkTrue,
+       checkException,
+       clearLog,
+       createLog,
+       DEACTIVATED,
+       errorLog,
+       guiSuiteAutoList,
+       guiSuiteList,
+       guiTestFeedback,
+       guiTestReport,
+       koUnit_isAutoTest,
+       koUnit_setAutoTest,
+       koUnit_runTest,
+       koUnit_showRUnitPane,
+       koUnit_version,
+       is.svSuite,
+       is.svSuiteData,
+       is.svTest,
+       is.svTestData,
+       is.test,
+       lastSuite,
+       lastTest,
+       Log,
+       makeUnit,
+       metadata,
+       protocol,
+       protocol_text,
+       protocol_junit,
+       runTest,
+       stats,
+       svSuite,
+       svSuiteList,
+       svTest,
+       test,
+       "test<-")
 
 S3method(makeUnit, default)
 S3method(makeUnit, svTest)
@@ -51,6 +52,8 @@ S3method(print, svTestData)
 
 S3method(protocol, default)
 S3method(protocol_text, svSuiteData)
+S3method(protocol_junit, svSuiteData)
+S3method(protocol_junit, svTestData)
 
 S3method(runTest, default)
 S3method(runTest, svTest)
